# zk-voting

./: Anchor.toml  CONTRIBUTING.md  LICENSE  README.md
programs/zk_voting/: Cargo.toml
programs/zk_voting/src/: errors.rs  lib.rs  state.rs
programs/zk_voting/src/instructions/: cast_vote.rs  create_proposal.rs  get_results.rs  initialize.rs  mod.rs  reward_participant.rs
programs/zk_voting/src/zk/: elgamal.rs  mod.rs  proofs.rs
tests/: zk_voting.ts
