[package]
name = "zk_voting"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_voting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
solana-program = "1.18.7"
rand = "0.8.4"
curve25519-dalek = { version = "4.0", features = ["digest", "rand_core"] }
sha3 = "0.10.3"
merlin = "3.0.0"
subtle = "2.4.0"

[dev-dependencies]
anchor-client = "0.29.0"